--- a/Programming/Design Pattern/1-Creational/🏭 4. Factory Pattern.md
+++ b/Programming/Design Pattern/1-Creational/🏭 4. Factory Pattern.md
@@ -5,7 +5,7 @@ Centralize and manage object creation — return the right object **based on a c
 ```ts
 interface Notify { send(msg: string): void; }
 
-class EmailNotification implements Notify { send(m: string){console.log(m+" Email");}}
+class EmailNotification implements Notify { send(m: string){console.log(m+" Email")}}
 class SMSNotification implements Notify { send(m: string){console.log(m+" SMS");}}
 
 class NotificationFactory {
