--- a/Programming/Design Pattern/1-Creational/🏭 4. Factory Pattern.md
+++ b/Programming/Design Pattern/1-Creational/🏭 4. Factory Pattern.md
@@ -1,18 +1,32 @@
 ### 🔹 Goal:
 
-Centralize and manage object creation — return the right object **based on a condition**. **Factory Method** is a creational design pattern that provides an interface for creating objects in a superclass, but allows subclasses to alter the type of objects that will be created.
+Centralize and manage object creation — return the right object **based on a condition**. **Factory Method**is a creational design pattern that
+provides an interface for creating objects in a superclass, but allows subclasses to alter the type of objects that will be created.
 
 ```ts
-interface Notify { send(msg: string): void; }
+interface Notify {
+  send(msg: string): void;
+}
 
-class EmailNotification implements Notify { send(m: string){console.log(m+" Email")}}
-class SMSNotification implements Notify { send(m: string){console.log(m+" SMS");}}
+class EmailNotification implements Notify {
+  send(m: string) {
+    console.log(m + " Email")
+  }
+}
+
+class SMSNotification implements Notify {
+  send(m: string) {
+    console.log(m + " SMS");
+  }
+}
 
 class NotificationFactory {
   static create(type: string): Notify | undefined {
     switch (type) {
-      case "email": return new EmailNotification();
-      case "sms": return new SMSNotification();
+      case "email":
+        return new EmailNotification();
+      case "sms":
+        return new SMSNotification();
     }
   }
 }
