--- a/Programming/Design Pattern/1-Creational/🧱 1. Singleton Pattern.md
+++ b/Programming/Design Pattern/1-Creational/🧱 1. Singleton Pattern.md
@@ -5,8 +5,10 @@ Ensure only **one instance** of a class exists and provide a **global access poi
 ```ts
 class Logger {
   private static _instance: Logger;
-  private constructor() {}
-  
+
+  private constructor() {
+  }
+
   static getInstance(): Logger {
     if (!this._instance) this._instance = new Logger();
     return this._instance;
